--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,8 @@ spring:
   batch:
     jdbc:
       initialize-schema: always
+      #table-prefix: SYSTEM_
 
     job:
-      enabled: false
+      names: ${job.name:NONE}
+      enabled: true
